--- a/templates/partials/toc_nonfiction-SF.html
+++ b/templates/partials/toc_nonfiction-SF.html
@@ -6,17 +6,26 @@
   <a href="#" class="pieceLink pieceLink-SF" id="sf2">
     Demolition Derby: HOUSE FOR SALE
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf3">Growing Pains</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf3">The Day I Died Again</a>
   <a href="#" class="pieceLink pieceLink-SF" id="sf4">Finding Zen</a>
+  <div class="sf4-line">
+    <div class="sf4-line--movingBlock"></div>
+  </div>
   <a href="#" class="pieceLink pieceLink-SF" id="sf5">Into the Gray</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf5">My Existential Romance</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf6">
+  <a href="#" class="pieceLink pieceLink-SF" id="sf6">My Existential Romance</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf7">
     The Feeling of a Soft Mind
   </a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf7">The Outside Witness</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf8">End Days</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf9">The Midwestern Root</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf10">Moments In-Between</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf11">Switched</a>
-  <a href="#" class="pieceLink pieceLink-SF" id="sf12">And, Today</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf8">The Outside Witness</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf9">End Days</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf10">The Midwestern Root</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf11">Moments In-Between</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf12">Switched</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf13">And, Today</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf14">The Greener Side</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf15">1</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf16">2</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf17">3</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf18">4</a>
+  <a href="#" class="pieceLink pieceLink-SF" id="sf19">5</a>
 </div>
