--- a/css/style.css
+++ b/css/style.css
@@ -2145,7 +2145,43 @@ a {
   width: 12%;
   transform: rotateZ(10deg);
   top: 10%;
-  left: 36%; }
+  left: 37%;
+  /**============================================
+   *             Mobile Small - 600
+@include respond(break-600) {}
+   *=============================================**/
+  /**============================================
+   *             Mobile Large - 850
+@include respond(break-850) {}
+   *=============================================**/
+  /**============================================
+   *                Tablet - 1000
+@include respond(break-1000) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Small - 1200
+   @include respond(break-1200) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1400) {}
+   *=============================================**/
+  /**============================================
+   *                Larger than - 1600
+   @include respond(break-greater-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Monitor Medium - 1400
+   @include respond(break-1600) {}
+   *=============================================**/
+  /**============================================
+   *                Telvision/Projector > 1800
+   @include respond(break-1800) {}
+   *=============================================**/ }
+  @media (min-width: 100em) {
+    .sf4-line {
+      top: 10%;
+      left: 36%; } }
   .sf4-line--movingBlock {
     position: absolute;
     border-radius: 2px;
@@ -2241,6 +2277,7 @@ a {
  *========================================================================**/
 .toc {
   width: 100%;
+  height: 90vh;
   display: flex;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("../img/toc-crop.jpg");
   background-size: cover;
