Shortform nonfiction lines drawn for larger screens 1900px

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'chapterImgs';
 @import 'toc-links';
 @import 'toc-containers';
+@import 'toc-theGreenerSide';
 
 //JS Transitions
 @import 'javascript';
