--- a/scss/_toc-theGreenerSide.scss
+++ b/scss/_toc-theGreenerSide.scss
@@ -15,6 +15,7 @@
   top: 72%;
   left: 21%;
   @include respond(break-greater-1600) {
+    transform: rotateZ(50deg);
     width: 20%;
     top: 71%;
     left: 18%;
@@ -137,6 +138,7 @@
   top: 62%;
   left: 24%;
   @include respond(break-greater-1600) {
+    transform: rotateZ(12deg);
     width: 14%;
     top: 61%;
     left: 21%;
@@ -165,6 +167,7 @@
   top: 78%;
   left: 18%;
   @include respond(break-greater-1600) {
+    transform: rotateZ(58deg);
     width: 26%;
     top: 76%;
     left: 15%;
